# Vyb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONSOLIDATION_COMPLETE.md  README.cleanup  README.md  README.md.backup  README_old.md  README_old.md.backup  SUGGESTIONS.md  SYNTAX_UNIFICATION_SUMMARY.md  TODO.md  UPDATE_LOG.md  aspect_test_ir.ll  basic_results.json  basic_test_report.html  binary_tree_O0  btree_complex  build.sh  migrate_syntax.py  migration_report_20251017_191851.md  migration_report_20251017_191851.md.backup  test_app  test_array2.vyn  test_array2.vyn.ll  test_array3.vyn  test_array3.vyn.ll  test_array4.vyn  test_array4.vyn.ll  test_array5.vyn.ll  test_array_func.vyn.ll  test_array_serialization.vyn  test_array_serialization.vyn.ll  test_assignment.vyn.ll  test_borrow.vyn.ll  test_compilation.sh  test_for_loop.vyn.ll  test_harness.py  test_method_call.vyn  test_method_call.vyn.ll  (+9 more)
.github/: copilot-instructions.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
demos/: README.md  collections.vyn  control_flow.vyn  ffi_freedom.vyn  finalization_targets.vyb  finalization_targets.vyn  structs_aspects.vyb  structs_aspects.vyn
demos/ffi_http_get/: README.md  main.vyb
demos/ffi_native_3d/: README.md  main.vyb  native_cube.c
doc/: ASPECT_BOUNDS.md  AST_Core.md  AST_Declarations.md  AST_Design_Considerations.md  AST_Expressions.md  AST_Literals.md  AST_Overview.md  AST_Patterns.md  AST_Roadmap.md  AST_Statements.md  AST_Types.md  AST_Types.md.backup  Async_Programming_Debug_System.md  Auto_Serialization_Main_Returns.md  Canonical_Reference_Syntax.md  Canonical_Reference_Syntax.md.backup  Declaration_Syntax.md  Declaration_Syntax.md.backup  Development_Guide.md  ENSURE_IMPLEMENTATION_STATUS.md  ERROR_PHASE6_CUSTOM_TYPES.md  ERROR_PROPAGATION_DESIGN.md  ERROR_TRAP.md  FEATURE_STATUS.md  FFI_DESIGN.md  INTROSPECTION_DESIGN.md  Intrinsics.md  LAMBDAS.md  MATCH_SYNTAX.md  MODULE_FFI_BINARY_ROADMAP.md  Memory_Operations.md  OWNERSHIP_MILD.md  Object_Construction_Allocation.md  PHASE6_PROGRESS.md  PHASE6_STEP5_COMPLETE.md  PHASE6_STEP5_PROGRESS.md  PHASE6_STEP5_REMAINING.md  PHASE_6_STEP_1_SELF_RESOLUTION.md  PHASE_6_STEP_2_METHOD_MONO.md  PROPOSAL_OWNERSHIP_KEYWORDS.md  (+35 more)
examples/: README.md  binary_tree.vyn  binary_tree.vyn.ll  binary_tree_clean.vyn  binary_tree_clean.vyn.ll  binary_tree_fixed.vyn  binary_tree_fixed.vyn.ll  binary_tree_simple.vyn  binary_tree_simple.vyn.ll  btree.vyn  ffi_puts.vyb  ffi_puts.vyn  main.vyb  main.vyn  memory_semantics.vyn  memory_semantics.vyn.backup  memory_semantics.vyn.ll  mild_references.vyb  mild_references.vyn  module_import.vyn  module_visibility.vyn  quicksort.vyn  relaxed_syntax.vyn  relaxed_syntax.vyn.backup  simple_templates.vyn  sort.vyn  stack.vyn  templates.vyn  vec_filter.vyn  vec_filter.vyn.ll  vec_max.vyb  vec_max.vyn  vec_max.vyn.ll  vec_point_distance.vyb  vec_point_distance.vyn  vec_point_distance.vyn.ll
examples/module_path_demo/: main.vyb
examples/modules/: math_tools.vyb  math_tools.vyn  visibility_tools.vyn
examples/stdlib_demo/: README.md  main.vyb
include/vyb/: driver.hpp  module_registry.hpp  semantic.hpp  vyb.hpp
include/vyn/: driver.hpp  module_registry.hpp  semantic.hpp  vyn.hpp
reports/: LANGUAGE_COMPLETION_REVIEW.md  TEST_EXAMPLE_DEMO_REVIEW.md
runtime/: vyb_runtime.c  vyb_type_metadata.c  vyb_type_metadata.h  vyn_runtime.c  vyn_type_metadata.c  vyn_type_metadata.h
src/: basictest.cpp  main.cpp  module_registry.cpp  tests.cpp  var_func_visitors.cpp
src/parser/: ast.cpp  ast_extra.cpp  base_parser.cpp  declaration_parser.cpp  expression_parser.cpp  lexer.cpp  module_parser.cpp  parser.cpp  statement_parser.cpp  token.cpp  type_parser.cpp
src/runtime/: async_runtime.cpp  error_handling.cpp
src/vre/: intrinsics.cpp  semantic.cpp  value.cpp
stdlib/: prelude.vyb  prelude.vyn
stdlib/collections/: mod.vyb
stdlib/core/: option.vyb  option.vyn  prelude.vyb  result.vyb
stdlib/error/: display.vyb  errable.vyb  errable.vyn  error.vyb  error.vyn  io_error.vyb  io_error.vyn  network_error.vyb  network_error.vyn  parse_error.vyb  parse_error.vyn
stdlib/io/: mod.vyb
test/: ORGANIZATION.md  README.md  STACK_TRACE_TESTS.md  async_comprehensive.vyn.ll  basic_assignment.vyn  basic_assignment.vyn.ll  borrow_test.vyn  conversion_test.vyb  conversion_test.vyn  debug_all_ownership.vyn  debug_async_test.ll  debug_async_test.vyn.ll  debug_function_call.vyn  debug_function_call.vyn.ll  debug_int_success.vyn.ll  debug_multiple_vecs.vyn.ll  debug_old_syntax.vyn  debug_ownership.vyn  debug_pointer.vyn.ll  debug_segfault.vyn.ll  debug_segfault_minimal.vyn.ll  debug_string_segfault.vyn.ll  debug_string_success.vyn.ll  debug_variables_test.vyn.ll  direct_return.vyn  extract_tests.py  extract_tests_improved.py  future_syntax_test.vyn  future_syntax_test.vyn.ll  future_type_test.vyn.ll  json_conversion_test.vyn  lit_test_debug.vyn  multi_value_test_progress.txt  parser_tests.py  raw_string_test.vyn.ll  run_examples.py  run_milestone_tests.py  run_tests.py  run_tests2.py  simple_fail.ll  (+93 more)
test/arrays/: test_array.vyb  test_array.vyn  test_array2.vyb  test_array2.vyn.ll  test_array3.vyb  test_array4.vyn  test_array5.vyb  test_array_func.vyb  test_array_func.vyn  test_array_serialization.vyb  test_array_serialization.vyn
test/aspect/: PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_6_ROADMAP.md  README.md  test_aspect_bounds.vyb  test_aspect_bounds.vyn  test_aspect_bounds.vyn.ll  test_aspect_comma_syntax.vyb  test_aspect_comma_syntax.vyn  test_aspect_default_methods.vyb  test_aspect_default_methods.vyn  test_aspect_default_methods.vyn.ll  test_aspect_generic_method.vyn  test_aspect_generic_method.vyn.ll  test_aspect_method_ambiguity_rejected.vyn  test_aspect_multiple.vyb  test_aspect_multiple.vyn  test_aspect_multiple.vyn.ll  test_aspect_syntax.vyn.ll  test_associated_type_duplicate_bind.vyn  test_associated_type_missing_bind.vyb  test_associated_type_positive.vyn  test_associated_type_unknown_bind.vyn  test_bounds_validation.vyn  test_invalid_bound.vyb  (+61 more)
(+1313 files in other folders)
